--- a/views/no_account.html
+++ b/views/no_account.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Account info</title>
+  <title>KaWoof</title>
   <link href="/public/styles.css" rel="stylesheet">
 </head>
 
 <body>
-  <h1>Account info</h1>
+  <h1>KaWoof</h1>
+  <a href="/auth/login" class="button">Login</a>
+  <a href="/auth/signup" class="button">Sign Up</a>
 </body>
 
 </html>
