Add simple kawoof creation

--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-  <h1>Account info</h1>
+  <h1>KaWoof</h1>
+  <a href="/create" class="button">Create a KaWoof</a>
+  <a href="/my-kawoofs" class="button">My KaWoofs</a>
 </body>
 
 </html>
