--- a/views/no_account.html
+++ b/views/no_account.html
@@ -1,17 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>KaWoof</title>
+    <link href="/public/styles.css" rel="stylesheet" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>KaWoof</title>
-  <link href="/public/styles.css" rel="stylesheet">
-</head>
-
-<body>
-  <h1>KaWoof</h1>
-  <a href="/auth/login" class="button">Login</a>
-  <a href="/auth/signup" class="button">Sign Up</a>
-</body>
-
+  <body>
+    <h1>KaWoof</h1>
+    <a href="/auth/login" class="button">Login</a>
+    <a href="/auth/signup" class="button">Sign Up</a>
+  </body>
 </html>
