--- a/views/index.html
+++ b/views/index.html
@@ -1,17 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Account info</title>
-  <link href="/public/styles.css" rel="stylesheet">
-</head>
-
-<body>
-  <h1>KaWoof</h1>
-  <a href="/create" class="button">Create a KaWoof</a>
-  <a href="/my-kawoofs" class="button">My KaWoofs</a>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Account info</title>
+    <link href="/public/styles.css" rel="stylesheet" />
+  </head>
+  <body>
+    <h1>KaWoof</h1>
+    <a href="/create" class="button">Create a KaWoof</a>
+    <a href="/my-kawoofs" class="button">My KaWoofs</a>
+  </body>
 </html>
