--- a/views/kawoof_details.html.hbs
+++ b/views/kawoof_details.html.hbs
@@ -11,7 +11,7 @@
 <body>
   <div style="display: flex; align-items: center; gap: 2rem;">
     <h1>{{kawoof.title}}</h1>
-    <a href="/play/{{kawoof.id}}" class="button">Play</a>
+    <a href="/host/{{kawoof.id}}" class="button">Play</a>
   </div>
   <ul>
     {{#each kawoof.questions}}
