Implement sending of next question via event_stream

--- a/views/kawoof_details.html.hbs
+++ b/views/kawoof_details.html.hbs
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-  <div style="display: flex; align-items: center; gap: 2rem;">
+  <div class="top">
     <h1>{{kawoof.title}}</h1>
-    <a href="/host/{{kawoof.id}}" class="button">Play</a>
+    <a href="/host/{{kawoof.id}}" class="button">Host</a>
   </div>
   <ul>
     {{#each kawoof.questions}}
