--- a/public/styles.css
+++ b/public/styles.css
@@ -22,10 +22,18 @@ h1 {
   font-size: 5rem;
 }
 
+.top {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  position: absolute;
+  top: 1rem;
+}
+
 button,
 a.button {
   background-color: var(--accent);
-  padding: 1rem 2rem;
+  padding: 0.5rem 1rem;
   border-radius: 1rem;
   border: none;
   font-size: 1rem;
@@ -36,6 +44,7 @@ a.button {
 
 form {
   display: flex;
+  align-items: center;
   flex-direction: column;
   gap: 1rem;
 }
