Fix event emitting

--- a/views/host_kawoof.html.hbs
+++ b/views/host_kawoof.html.hbs
@@ -9,9 +9,13 @@
 </head>
 
 <body>
-  <h1 class="top">{{kawoof.title}}</h1>
-  <h2>Players:</h2>
-  <ul id="players"></ul>
+  <h2 class="top">{{kawoof.title}}</h2>
+  <div id="lobby">
+    <h1>Code: {{kawoof.id}}</h1>
+    <h2>Players:</h2>
+    <ul id="players"></ul>
+  </div>
+  <h1 id="question"></h1>
   <button id="next_button">Start</button>
   <script src="/public/lobby.js"></script>
 </body>
