--- a/views/kawoof_details.html.hbs
+++ b/views/kawoof_details.html.hbs
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+  <title>{{kawoof.title}}</title>
   <link href="/public/styles.css" rel="stylesheet">
 </head>
 
 <body>
-  <div class="top">
+  <div class="top" style="flex-direction: row;">
     <h1>{{kawoof.title}}</h1>
     <a href="/host/{{kawoof.id}}" class="button">Host</a>
   </div>
