--- a/public/styles.css
+++ b/public/styles.css
@@ -22,6 +22,13 @@ h1 {
   font-size: 5rem;
 }
 
+div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
 .top {
   display: flex;
   align-items: center;
