Display current question and restructure next_question event

--- a/views/host_kawoof.html.hbs
+++ b/views/host_kawoof.html.hbs
@@ -10,7 +10,7 @@
 
 <body>
   <h2 class="top">{{kawoof.title}}</h2>
-  <div id="lobby">
+  <div id="pre-start">
     <h1>Code: {{kawoof.id}}</h1>
     <h2>Players:</h2>
     <ul id="players"></ul>
