--- a/public/styles.css
+++ b/public/styles.css
@@ -26,6 +26,7 @@ div {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-evenly;
   gap: 1rem;
 }
 
@@ -47,6 +48,15 @@ a.button {
   cursor: pointer;
   text-decoration: none;
   color: var(--text);
+}
+
+.answer {
+  font-size: 5rem;
+}
+
+#answers {
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 form {
