--- a/views/host_kawoof.html.hbs
+++ b/views/host_kawoof.html.hbs
@@ -17,6 +17,11 @@
   </div>
   <h1 id="question"></h1>
   <button id="next_button">Start</button>
+
+  <dialog id="reconnecting-dialog">
+    <h1>Reconnecting...</h1>
+    <h2>Please don't refresh</h2>
+  </dialog>
   <script src="/public/lobby.js"></script>
 </body>
 
