--- a/views/enter_code.html
+++ b/views/enter_code.html
@@ -10,7 +10,7 @@
     <h1 class="top">KaWoof</h1>
     <form action="/join/redirect/" method="post">
       <label for="kawoof_id">Enter code:</label>
-      <input type="text" name="kawoof_id" placeholder="1234" required />
+      <input type="number" name="kawoof_id" placeholder="1234" required />
       <button>Join</button>
     </form>
   </body>
