--- a/views/host_kawoof.html.hbs
+++ b/views/host_kawoof.html.hbs
@@ -17,6 +17,7 @@
   </div>
   <h1 id="question"></h1>
   <button id="next_button">Start</button>
+  <ul id="player-list"></ul>
 
   <dialog id="reconnecting-dialog">
     <h1>Reconnecting...</h1>
